@@ -42,7 +42,7 @@
 
     <groupId>org.apache.ignite</groupId>
     <artifactId>ignite-parent</artifactId>
-    <version>${revision}</version>
+    <version>2.16.999-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <properties>
@@ -52,7 +52,7 @@
         <revision>2.16.999-SNAPSHOT</revision>
         <!-- Ignite version will be substituted with the flatten-maven-plugin and used as
             a version dependency for Ignite extensions. -->
-        <ignite.version>${revision}</ignite.version>
+        <ignite.version>2.16.999-SNAPSHOT</ignite.version>
         <ignite.edition>apache-ignite</ignite.edition>
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -66,54 +66,32 @@
         <failIfNoTests>false</failIfNoTests>
 
         <!-- Dependency versions -->
-        <activemq.version>5.12.0</activemq.version>
-        <aopalliance.bundle.version>1.0_6</aopalliance.bundle.version>
-        <asm.version>9.6</asm.version>
-        <aspectj.bundle.version>1.8.13_1</aspectj.bundle.version>
-        <aspectj.version>1.8.13</aspectj.version>
-        <netty.version>4.1.94.Final</netty.version>
-        <bouncycastle.version>1.69</bouncycastle.version>
-        <commons.beanutils.bundle.version>1.9.2_1</commons.beanutils.bundle.version>
-        <commons.beanutils.version>1.9.4</commons.beanutils.version>
         <commons.codec.version>1.16.0</commons.codec.version>
         <commons.collections.version>3.2.2</commons.collections.version>        
+        <commons.lang.version>2.6</commons.lang.version>
         <commons.io.version>2.11.0</commons.io.version>
         <commons.dbcp.version>1.4</commons.dbcp.version>
         <cron4j.version>2.2.5</cron4j.version>
         <curator.version>5.2.0</curator.version>
-        <easymock.version>3.4</easymock.version>
-        <ezmorph.bundle.version>1.0.6_1</ezmorph.bundle.version>
-        <ezmorph.version>1.0.6</ezmorph.version>
-        <guava.retrying.version>2.0.0</guava.retrying.version>
-        <guava.version>32.1.2-jre</guava.version>        
+        <guava.version>32.1.2-jre</guava.version>
         <grpc-context.version>1.62.2</grpc-context.version>
         <h2.version>1.4.197</h2.version>
-        <hadoop.version>2.9.1</hadoop.version>
         <hamcrest.version>2.2</hamcrest.version>
-        <httpclient.version>4.5.13</httpclient.version>
-        <httpcore.version>4.4.14</httpcore.version>
         <jackson.version>2.14.0</jackson.version>
-        <jaxb.api.version>2.1</jaxb.api.version>
-        <jaxb.impl.version>2.1.14</jaxb.impl.version>
         <javassist.version>3.28.0-GA</javassist.version>
         <javax.cache.bundle.version>1.0.0_1</javax.cache.bundle.version>
         <javax.cache.tck.version>1.1.0</javax.cache.tck.version>
         <javax.cache.version>1.1.1</javax.cache.version>
         <jboss.rmi.version>1.0.6.Final</jboss.rmi.version>
         <jetbrains.annotations.version>16.0.3</jetbrains.annotations.version>
-        <jetty.version>9.4.51.v20230217</jetty.version>
+        <jetty.version>9.4.55.v20240627</jetty.version>
         <jmh.version>1.13</jmh.version>
-        <jms.spec.version>1.1.1</jms.spec.version>
         <jna.version>4.5.2</jna.version>
         <jnr.posix.version>3.1.15</jnr.posix.version>
         <jotm.version>2.3.1-M1</jotm.version>
-        <jsch.bundle.version>0.1.54_1</jsch.bundle.version>
-        <jsch.version>0.1.54</jsch.version>
-        <jsonlib.bundle.version>2.4_1</jsonlib.bundle.version>
-        <jsonlib.version>2.4</jsonlib.version>
         <jtidy.version>r938</jtidy.version>
-        <kafka.version>3.4.0</kafka.version>
-        <log4j2.version>2.22.0</log4j2.version>       
+        <log4j2.version>2.22.0</log4j2.version>
+        <lucene.bundle.version>7.4.0_1</lucene.bundle.version>
         <lucene.version>8.11.2</lucene.version>
         <lz4.version>1.8.0</lz4.version>
         <maven.bundle.plugin.version>3.5.0</maven.bundle.plugin.version>
@@ -124,22 +102,14 @@
         <checkstyle.puppycrawl.version>8.45</checkstyle.puppycrawl.version>
         <mockito.version>3.12.4</mockito.version>
         <mysql.connector.version>8.0.30</mysql.connector.version>
-        <netlibjava.version>1.1.2</netlibjava.version>
-        <oro.bundle.version>2.0.8_6</oro.bundle.version>
-        <paho.version>1.0.2</paho.version>
-        <postgres.connector.version>42.6.0</postgres.connector.version>        
-        <slf4j.version>1.7.33</slf4j.version>        
+        <postgres.connector.version>42.7.3</postgres.connector.version>
+        <slf4j.version>1.7.33</slf4j.version>
         <snappy.version>1.1.10.4</snappy.version>
         <spring.version>5.2.25.RELEASE</spring.version>
-        <storm.version>1.1.1</storm.version>
         <surefire.version>3.1.2</surefire.version>
         <tomcat.version>9.0.63</tomcat.version>
-        <twitter.hbc.version>2.2.0</twitter.hbc.version>
-        <yammer.metrics.annotation.version>2.2.0</yammer.metrics.annotation.version>
-        <yammer.metrics.core.version>2.2.0</yammer.metrics.core.version>
         <yardstick.version>0.8.3</yardstick.version>
-        <zkclient.version>0.5</zkclient.version>
-        <zookeeper.version>3.8.3</zookeeper.version>
+        <zookeeper.version>3.8.4</zookeeper.version>
         <zstd.version>1.5.5-5</zstd.version>
         <opencensus.version>0.31.1</opencensus.version>
         <commons.lang3.version>3.9</commons.lang3.version>
@@ -370,6 +340,60 @@
                                     </table>
                                 ]]>
                         </bottom>
+                        <groups>
+                            <group>
+                                <title>Common Grid APIs</title>
+                                <packages>org.apache.ignite:org.apache.ignite.cluster:org.apache.ignite.lifecycle:org.apache.ignite.configuration:org.apache.ignite.lang:org.apache.ignite.resources:org.apache.ignite.thread:org.apache.ignite.scheduler:org.apache.ignite.events:org.apache.ignite.messaging:org.apache.ignite.startup*:org.apache.ignite.mem</packages>
+                            </group>
+                            <group>
+                                <title>Data Grid APIs</title>
+                                <packages>org.apache.ignite.cache*:org.apache.ignite.transactions:org.apache.ignite.compute*:org.apache.ignite.services:org.apache.ignite.datastructures:org.apache.ignite.dataload:org.apache.ignite.streamer*:org.apache.ignite.stream*</packages>
+                            </group>
+                            <group>
+                                <title>Thin Client APIs</title>
+                                <packages>org.apache.ignite.client:org.apache.ignite.client.events</packages>
+                            </group>
+                            <group>
+                                <title>Binary Objects API</title>
+                                <packages>org.apache.ignite.binary*</packages>
+                            </group>
+                            <group>
+                                <title>SQL engines</title>
+                                <packages>org.apache.ignite.calcite:org.apache.ignite.indexing</packages>
+                            </group>
+                            <group>
+                                <title>Security APIs</title>
+                                <packages>org.apache.ignite.plugin.security:org.apache.ignite.ssl:org.apache.ignite.spi.encryption*</packages>
+                            </group>
+                            <group>
+                                <title>Maintenance and Monitoring APIs</title>
+                                <packages>org.apache.ignite.maintenance:org.apache.ignite.mbean:org.apache.ignite.mxbean:org.apache.ignite.failure:org.apache.ignite.plugin.segmentation:org.apache.ignite.logger*:org.apache.ignite.metric:org.apache.ignite.spi.systemview*</packages>
+                            </group>
+                            <group>
+                                <title>Kubernetes Integration</title>
+                                <packages>org.apache.ignite.kubernetes*</packages>
+                            </group>
+                            <group>
+                                <title>Platforms</title>
+                                <packages>org.apache.ignite.platform*:org.apache.ignite.marshaller*</packages>
+                            </group>
+                            <group>
+                                <title>Availability APIs</title>
+                                <packages>org.apache.ignite.cdc:org.apache.ignite.dump</packages>
+                            </group>
+                            <group>
+                                <title>Plugins APIs</title>
+                                <packages>org.apache.ignite.plugin*:org.apache.ignite.visor.plugin</packages>
+                            </group>
+                            <group>
+                                <title>SPI APIs</title>
+                                <packages>org.apache.ignite.spi:org.apache.ignite.spi.checkpoint*:org.apache.ignite.spi.collision*:org.apache.ignite.spi.indexing*:org.apache.ignite.spi.loadbalancing*:org.apache.ignite.spi.communication*:org.apache.ignite.spi.deployment*:org.apache.ignite.spi.swapspace*:org.apache.ignite.spi.discovery*:org.apache.ignite.spi.failover*:org.apache.ignite.spi.eventstorage*:org.apache.ignite.spi.tracing*:org.apache.ignite.spi.metric*</packages>
+                            </group>
+                            <group>
+                                <title>Development Utils</title>
+                                <packages>org.apache.ignite.development.utils*</packages>
+                            </group>
+                        </groups>
                     </configuration>
                 </plugin>
 
@@ -909,6 +933,8 @@
                                 <arg>java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED</arg>
                                 <arg>--add-exports</arg>
                                 <arg>jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED</arg>
+                                <arg>--add-exports</arg>
+                                <arg>java.base/sun.net.util=ALL-UNNAMED</arg>
                             </compilerArgs>
                         </configuration>
                     </plugin>
@@ -936,9 +962,7 @@
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-javadoc-plugin</artifactId>
                         <configuration>
-                            <!-- TODO https://issues.apache.org/jira/browse/IGNITE-13202 -->
                             <additionalOptions>${javadoc.opts} --add-exports=java.base/sun.nio.ch=ALL-UNNAMED --add-exports=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED</additionalOptions>
-                            <detectJavaApiLink>false</detectJavaApiLink>
                         </configuration>
                     </plugin>
                 </plugins>
@@ -1055,6 +1079,14 @@
                                 --add-opens=java.management/sun.management=ALL-UNNAMED
                                 --add-opens java.desktop/java.awt.font=ALL-UNNAMED
                             </argLine>
+                        </configuration>
+                    </plugin>
+
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-javadoc-plugin</artifactId>
+                        <configuration>
+                            <additionalOptions>${javadoc.opts} --add-exports=java.base/sun.nio.ch=ALL-UNNAMED --add-exports=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED</additionalOptions>
                         </configuration>
                     </plugin>
                 </plugins>
